# 1.2.0 : --/--/2020

* Migration
* Proxy for Http Client Addr

# 1.1.0 : 24/05/2020

* Routes refactoring
* SSO session bug
* User config, cache
* GroupUser, field type corrections
* Send AskPassWord email

# 1.0.3 : 20/01/2020

* Group & ...

# 1.0.2 : AutoLogin

* AutoLogin Header.

# 1.0.1 : First test version

* Simple SignIn SignOut