@@ -2,6 +2,7 @@
 
 * Migration
 * Proxy for Http Client Addr
+* User title constants
 
 # 1.1.0 : 24/05/2020
 
